mw-kreator-regul-biznesowych/app-modul-silnik-regul/src/main/java/reguly/antlr/RuleSetParser.java
// Generated from RuleSet.g4 by ANTLR 4.7.2

package reguly.antlr;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RuleSetParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, INT=42, NUMERIC_VALUE=43, IDENTIFIER=44, 
		RULECOMMENT=45, NEWLINE=46, WS=47;
	public static final int
		RULE_rule_set = 0, RULE_single_rule = 1, RULE_logical_expr = 2, RULE_specification_expr = 3, 
		RULE_left_arithmetic_expr = 4, RULE_right_arithmetic_expr = 5, RULE_arithmetic_expr = 6, 
		RULE_numeric_expr = 7, RULE_value_expr = 8, RULE_total_expr = 9, RULE_jsonpath_expr = 10, 
		RULE_jsonpath_dotnotation_expr = 11, RULE_dotnotation_expr = 12, RULE_identifierWithQualifier = 13, 
		RULE_query_expr = 14, RULE_string_comparison_value = 15, RULE_string_array = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"rule_set", "single_rule", "logical_expr", "specification_expr", "left_arithmetic_expr", 
			"right_arithmetic_expr", "arithmetic_expr", "numeric_expr", "value_expr", 
			"total_expr", "jsonpath_expr", "jsonpath_dotnotation_expr", "dotnotation_expr", 
			"identifierWithQualifier", "query_expr", "string_comparison_value", "string_array"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'and'", "'or'", "'not'", "'SUM('", "') greater than ('", "')'", 
			"') greater than '", "'('", "' greater than '", "' greater than ('", 
			"') less than ('", "') less than '", "' less than ('", "' less than '", 
			"'equals'", "'contains'", "'is true'", "'is false'", "'includes one'", 
			"'*'", "'/'", "'+'", "'-'", "'$.'", "'.'", "'[]'", "'[*]'", "'['", "']'", 
			"'[?('", "')]'", "'&&'", "'||'", "'@.'", "'>'", "'<'", "'@.length-'", 
			"'=='", "'==''", "'''", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "INT", "NUMERIC_VALUE", "IDENTIFIER", 
			"RULECOMMENT", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RuleSet.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RuleSetParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Rule_setContext extends ParserRuleContext {
		public List<Single_ruleContext> single_rule() {
			return getRuleContexts(Single_ruleContext.class);
		}
		public Single_ruleContext single_rule(int i) {
			return getRuleContext(Single_ruleContext.class,i);
		}
		public TerminalNode EOF() { return getToken(RuleSetParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(RuleSetParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(RuleSetParser.NEWLINE, i);
		}
		public Rule_setContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule_set; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).enterRule_set(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).exitRule_set(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleSetVisitor ) return ((RuleSetVisitor<? extends T>)visitor).visitRule_set(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rule_setContext rule_set() throws RecognitionException {
		Rule_setContext _localctx = new Rule_setContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_rule_set);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			single_rule();
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(35);
				match(NEWLINE);
				setState(36);
				single_rule();
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(42);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Single_ruleContext extends ParserRuleContext {
		public Logical_exprContext logical_expr() {
			return getRuleContext(Logical_exprContext.class,0);
		}
		public TerminalNode RULECOMMENT() { return getToken(RuleSetParser.RULECOMMENT, 0); }
		public Single_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).enterSingle_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).exitSingle_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleSetVisitor ) return ((RuleSetVisitor<? extends T>)visitor).visitSingle_rule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Single_ruleContext single_rule() throws RecognitionException {
		Single_ruleContext _localctx = new Single_ruleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_single_rule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			logical_expr(0);
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RULECOMMENT) {
				{
				setState(45);
				match(RULECOMMENT);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logical_exprContext extends ParserRuleContext {
		public Logical_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical_expr; }
	 
		public Logical_exprContext() { }
		public void copyFrom(Logical_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LogicalExpressionAndContext extends Logical_exprContext {
		public List<Logical_exprContext> logical_expr() {
			return getRuleContexts(Logical_exprContext.class);
		}
		public Logical_exprContext logical_expr(int i) {
			return getRuleContext(Logical_exprContext.class,i);
		}
		public LogicalExpressionAndContext(Logical_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).enterLogicalExpressionAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).exitLogicalExpressionAnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleSetVisitor ) return ((RuleSetVisitor<? extends T>)visitor).visitLogicalExpressionAnd(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogicalExpressionNotContext extends Logical_exprContext {
		public Logical_exprContext logical_expr() {
			return getRuleContext(Logical_exprContext.class,0);
		}
		public LogicalExpressionNotContext(Logical_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).enterLogicalExpressionNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).exitLogicalExpressionNot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleSetVisitor ) return ((RuleSetVisitor<? extends T>)visitor).visitLogicalExpressionNot(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogicalExpressionOrContext extends Logical_exprContext {
		public List<Logical_exprContext> logical_expr() {
			return getRuleContexts(Logical_exprContext.class);
		}
		public Logical_exprContext logical_expr(int i) {
			return getRuleContext(Logical_exprContext.class,i);
		}
		public LogicalExpressionOrContext(Logical_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).enterLogicalExpressionOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).exitLogicalExpressionOr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleSetVisitor ) return ((RuleSetVisitor<? extends T>)visitor).visitLogicalExpressionOr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SpecificationExpressionContext extends Logical_exprContext {
		public Specification_exprContext specification_expr() {
			return getRuleContext(Specification_exprContext.class,0);
		}
		public SpecificationExpressionContext(Logical_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).enterSpecificationExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).exitSpecificationExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleSetVisitor ) return ((RuleSetVisitor<? extends T>)visitor).visitSpecificationExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logical_exprContext logical_expr() throws RecognitionException {
		return logical_expr(0);
	}

	private Logical_exprContext logical_expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Logical_exprContext _localctx = new Logical_exprContext(_ctx, _parentState);
		Logical_exprContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_logical_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				{
				_localctx = new LogicalExpressionNotContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(49);
				match(T__2);
				setState(50);
				logical_expr(2);
				}
				break;
			case T__3:
			case T__7:
			case T__23:
			case INT:
			case NUMERIC_VALUE:
			case IDENTIFIER:
				{
				_localctx = new SpecificationExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(51);
				specification_expr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(62);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(60);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new LogicalExpressionAndContext(new Logical_exprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_logical_expr);
						setState(54);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(55);
						match(T__0);
						setState(56);
						logical_expr(5);
						}
						break;
					case 2:
						{
						_localctx = new LogicalExpressionOrContext(new Logical_exprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_logical_expr);
						setState(57);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(58);
						match(T__1);
						setState(59);
						logical_expr(4);
						}
						break;
					}
					} 
				}
				setState(64);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Specification_exprContext extends ParserRuleContext {
		public Specification_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specification_expr; }
	 
		public Specification_exprContext() { }
		public void copyFrom(Specification_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StringEqualsComparisonSpecificationExpressionContext extends Specification_exprContext {
		public Value_exprContext value_expr() {
			return getRuleContext(Value_exprContext.class,0);
		}
		public String_comparison_valueContext string_comparison_value() {
			return getRuleContext(String_comparison_valueContext.class,0);
		}
		public StringEqualsComparisonSpecificationExpressionContext(Specification_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).enterStringEqualsComparisonSpecificationExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).exitStringEqualsComparisonSpecificationExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleSetVisitor ) return ((RuleSetVisitor<? extends T>)visitor).visitStringEqualsComparisonSpecificationExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BooleanIsFalseComparisonSpecificationExpressionContext extends Specification_exprContext {
		public Value_exprContext value_expr() {
			return getRuleContext(Value_exprContext.class,0);
		}
		public BooleanIsFalseComparisonSpecificationExpressionContext(Specification_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).enterBooleanIsFalseComparisonSpecificationExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).exitBooleanIsFalseComparisonSpecificationExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleSetVisitor ) return ((RuleSetVisitor<? extends T>)visitor).visitBooleanIsFalseComparisonSpecificationExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TotalledNumericLessThanComparisonSpecificationExpressionContext extends Specification_exprContext {
		public Jsonpath_exprContext jsonpath_expr() {
			return getRuleContext(Jsonpath_exprContext.class,0);
		}
		public Right_arithmetic_exprContext right_arithmetic_expr() {
			return getRuleContext(Right_arithmetic_exprContext.class,0);
		}
		public Numeric_exprContext numeric_expr() {
			return getRuleContext(Numeric_exprContext.class,0);
		}
		public TotalledNumericLessThanComparisonSpecificationExpressionContext(Specification_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).enterTotalledNumericLessThanComparisonSpecificationExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).exitTotalledNumericLessThanComparisonSpecificationExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleSetVisitor ) return ((RuleSetVisitor<? extends T>)visitor).visitTotalledNumericLessThanComparisonSpecificationExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TotalledNumericGreaterThanComparisonSpecificationExpressionContext extends Specification_exprContext {
		public Jsonpath_exprContext jsonpath_expr() {
			return getRuleContext(Jsonpath_exprContext.class,0);
		}
		public Right_arithmetic_exprContext right_arithmetic_expr() {
			return getRuleContext(Right_arithmetic_exprContext.class,0);
		}
		public Numeric_exprContext numeric_expr() {
			return getRuleContext(Numeric_exprContext.class,0);
		}
		public TotalledNumericGreaterThanComparisonSpecificationExpressionContext(Specification_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).enterTotalledNumericGreaterThanComparisonSpecificationExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).exitTotalledNumericGreaterThanComparisonSpecificationExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleSetVisitor ) return ((RuleSetVisitor<? extends T>)visitor).visitTotalledNumericGreaterThanComparisonSpecificationExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumericLessThanComparisonSpecificationExpressionContext extends Specification_exprContext {
		public Left_arithmetic_exprContext left_arithmetic_expr() {
			return getRuleContext(Left_arithmetic_exprContext.class,0);
		}
		public Right_arithmetic_exprContext right_arithmetic_expr() {
			return getRuleContext(Right_arithmetic_exprContext.class,0);
		}
		public List<Numeric_exprContext> numeric_expr() {
			return getRuleContexts(Numeric_exprContext.class);
		}
		public Numeric_exprContext numeric_expr(int i) {
			return getRuleContext(Numeric_exprContext.class,i);
		}
		public NumericLessThanComparisonSpecificationExpressionContext(Specification_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).enterNumericLessThanComparisonSpecificationExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).exitNumericLessThanComparisonSpecificationExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleSetVisitor ) return ((RuleSetVisitor<? extends T>)visitor).visitNumericLessThanComparisonSpecificationExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArrayIncludesOneComparisonSpecificationExpressionContext extends Specification_exprContext {
		public Value_exprContext value_expr() {
			return getRuleContext(Value_exprContext.class,0);
		}
		public String_arrayContext string_array() {
			return getRuleContext(String_arrayContext.class,0);
		}
		public ArrayIncludesOneComparisonSpecificationExpressionContext(Specification_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).enterArrayIncludesOneComparisonSpecificationExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).exitArrayIncludesOneComparisonSpecificationExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleSetVisitor ) return ((RuleSetVisitor<? extends T>)visitor).visitArrayIncludesOneComparisonSpecificationExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BooleanIsTrueComparisonSpecificationExpressionContext extends Specification_exprContext {
		public Value_exprContext value_expr() {
			return getRuleContext(Value_exprContext.class,0);
		}
		public BooleanIsTrueComparisonSpecificationExpressionContext(Specification_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).enterBooleanIsTrueComparisonSpecificationExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).exitBooleanIsTrueComparisonSpecificationExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleSetVisitor ) return ((RuleSetVisitor<? extends T>)visitor).visitBooleanIsTrueComparisonSpecificationExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringContainsComparisonSpecificationExpressionContext extends Specification_exprContext {
		public Value_exprContext value_expr() {
			return getRuleContext(Value_exprContext.class,0);
		}
		public String_comparison_valueContext string_comparison_value() {
			return getRuleContext(String_comparison_valueContext.class,0);
		}
		public StringContainsComparisonSpecificationExpressionContext(Specification_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).enterStringContainsComparisonSpecificationExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).exitStringContainsComparisonSpecificationExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleSetVisitor ) return ((RuleSetVisitor<? extends T>)visitor).visitStringContainsComparisonSpecificationExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumericGreaterThanComparisonSpecificationExpressionContext extends Specification_exprContext {
		public Left_arithmetic_exprContext left_arithmetic_expr() {
			return getRuleContext(Left_arithmetic_exprContext.class,0);
		}
		public Right_arithmetic_exprContext right_arithmetic_expr() {
			return getRuleContext(Right_arithmetic_exprContext.class,0);
		}
		public List<Numeric_exprContext> numeric_expr() {
			return getRuleContexts(Numeric_exprContext.class);
		}
		public Numeric_exprContext numeric_expr(int i) {
			return getRuleContext(Numeric_exprContext.class,i);
		}
		public NumericGreaterThanComparisonSpecificationExpressionContext(Specification_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).enterNumericGreaterThanComparisonSpecificationExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleSetListener ) ((RuleSetListener)listener).exitNumericGreaterThanComparisonSpecificationExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleSetVisitor ) return ((RuleSetVisitor<? extends T>)visitor).visitNumericGreaterThanComparisonSpecificationExpression(this);
			else return visitor.visitChildren(this);
		}
	}
